[gd_scene load_steps=21 format=3 uid="uid://cx27ph4yff2mn"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_m1bla"]
[ext_resource type="PackedScene" uid="uid://du71ov0s1dmgi" path="res://scenes/component/random_stream_player_component.tscn" id="2_1n7pg"]
[ext_resource type="AudioStream" uid="uid://dqtjg7kabsafs" path="res://assets/audio/switch1.ogg" id="3_ypkte"]
[ext_resource type="AudioStream" uid="uid://cmfktaojlqe3i" path="res://assets/audio/switch2.ogg" id="4_28ldx"]
[ext_resource type="AudioStream" uid="uid://dt8resn0r70k0" path="res://assets/audio/switch3.ogg" id="5_54nu3"]
[ext_resource type="AudioStream" uid="uid://cdv0t6m13r2se" path="res://assets/audio/switch4.ogg" id="6_daorr"]
[ext_resource type="AudioStream" uid="uid://cqkex6lwv5a03" path="res://assets/audio/switch5.ogg" id="7_homjw"]
[ext_resource type="AudioStream" uid="uid://bm54wx5mpmoab" path="res://assets/audio/switch6.ogg" id="8_mm20w"]
[ext_resource type="AudioStream" uid="uid://drq4vfbpnlb2c" path="res://assets/audio/switch7.ogg" id="9_dqrn2"]
[ext_resource type="AudioStream" uid="uid://tjodmh11wect" path="res://assets/audio/switch8.ogg" id="10_3t2jb"]
[ext_resource type="AudioStream" uid="uid://ubirmbuf2noa" path="res://assets/audio/switch9.ogg" id="11_mehuw"]
[ext_resource type="AudioStream" uid="uid://dy5g230nhsoc6" path="res://assets/audio/switch10.ogg" id="12_rrq3h"]

[sub_resource type="Animation" id="Animation_64f8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vanvf"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.00136e-05, 1.00136e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6odxf"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qtta6"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.14355, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickStreamPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqr6p"]
_data = {
"RESET": SubResource("Animation_64f8k"),
"discard": SubResource("Animation_vanvf"),
"in": SubResource("Animation_6odxf"),
"selected": SubResource("Animation_qtta6")
}

[sub_resource type="Animation" id="Animation_sj4cm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3mrdd"]
resource_name = "hover"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverStreamPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6845n"]
_data = {
"RESET": SubResource("Animation_sj4cm"),
"hover": SubResource("Animation_3mrdd")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(150, 150)
offset_right = 128.0
offset_bottom = 150.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_m1bla")

[node name="HoverStreamPlayerComponent" parent="." instance=ExtResource("2_1n7pg")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("3_ypkte"), ExtResource("4_28ldx"), ExtResource("5_54nu3"), ExtResource("6_daorr"), ExtResource("7_homjw"), ExtResource("8_mm20w"), ExtResource("9_dqrn2"), ExtResource("10_3t2jb"), ExtResource("11_mehuw"), ExtResource("12_rrq3h")])

[node name="ClickStreamPlayerComponent" parent="." instance=ExtResource("2_1n7pg")]
streams = Array[AudioStream]([ExtResource("3_ypkte"), ExtResource("4_28ldx"), ExtResource("5_54nu3"), ExtResource("6_daorr"), ExtResource("7_homjw"), ExtResource("8_mm20w"), ExtResource("9_dqrn2"), ExtResource("10_3t2jb"), ExtResource("11_mehuw"), ExtResource("12_rrq3h")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bqr6p")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6845n")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "test name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
text = "write some description here as you write a long description"
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
